test/compile-errors/circular-import-a.crow.ast.repr
file-ast(
	imports: ports(range(0, 29), [import-ast(".//circular-import-b", none)])
	specs: []
	aliases: []
	structs: []
	funs: [
		fun-decl(
			public?: true
			sig: sig-ast(range(29, 36), a, inststruct(range(31, 34), name-range(31, int)), [])
			body: literal(nat(0, false)))])
